--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>home</title>
 </head>
 <body>
-    
+    <h1>Homepage</h1>
+    <a href="practice.html" target="_blank" rel="noopener noreferrer">practice page</a>
 </body>
 </html>
